--- a/man2/mandoc.css
+++ b/man2/mandoc.css
@@ -217,3 +217,9 @@ a.Ux { }
 .Li {		font-style: normal;
 		font-weight: normal;
 		font-family: monospace; }
+
+/* Viewport for small screen devices */
+
+@viewport { width: device-width; zoom: 1; }
+@-ms-viewport { width: device-width; zoom: 1; }
+@-o-viewport { width: device-width; zoom: 1; }
