--- a/man2/mandoc.css
+++ b/man2/mandoc.css
@@ -221,5 +221,5 @@ a.Ux { }
 /* Viewport for small screen devices */
 
 @viewport { width: device-width; zoom: 1; }
-@-ms-viewport { width: device-width; zoom: 1; }
-@-o-viewport { width: device-width; zoom: 1; }
+/*@-ms-viewport { width: device-width; zoom: 1; }
+@-o-viewport { width: device-width; zoom: 1; }/*
