--- a/man2/mandoc.css
+++ b/man2/mandoc.css
@@ -219,7 +219,6 @@ a.Ux { }
 		font-family: monospace; }
 
 /* Viewport for small screen devices */
-
-@viewport @-ms-viewport @-o-viewport { width: device-width; zoom: 1; }
-/*@-ms-viewport { width: device-width; zoom: 1; }
-@-o-viewport { width: device-width; zoom: 1; }/*
+@viewport { width: device-width; zoom: 1; }
+@-ms-viewport { width: device-width; zoom: 1; }
+@-o-viewport { width: device-width; zoom: 1; }
